# rca-generator

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/incident-001/: alerts.yaml  logs.txt  metrics_summary.yaml  slack_thread.json  tickets.yaml
examples/incident-001/runbooks/: checkout-service.md
src/rca_generator/: cli.py  connectors.py  generator.py  llm.py  pipeline.py  report.py  runbooks.py  sources.py  stages.py  timeline.py  tokens.py  tools.py
tests/: test_cli.py  test_generator.py  test_pipeline.py  test_runbooks.py  test_timeline.py
