[project]
name = "rca-generator"
version = "0.1.0"
description = "Agentic RCA generator: staged LLM pipeline over pluggable evidence connectors, with gap detection, token ledger, and a human review gate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
rca-generator = "rca_generator.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
